@@ -1,5 +1,10 @@
 2009-12-29  Andoni Morales Alastruey  <amorales@flumotion.com>
 
+	* flumotion/component/consumers/applestreamer/resources.py:
+	Return a HTTP Forbiden error when the request is out of the mountpoint
+
+2009-12-29  Andoni Morales Alastruey  <amorales@flumotion.com>
+
 	* env.in:
 	Add FLU_PROJECT_PATH for test components
 	* flumotion/test/test_hls_ring.py:
